# unnormal-calculator

./: CMakeLists.txt  FileHandler.cpp  FileHandler.h  InputParser.cpp  NumberSystemConverter.cpp  README.md  input.txt  main.cpp
include/: InputParser.h  NumberSystemConverter.h
src/: FileHandler.cpp  InputParser.cpp  NumberSystemConverter.cpp
test/uint_tests/: CMakeLists.txt  test_input_parser.cpp  test_number_converter.cpp
